borsh-derive/src/attribute_helpers/snapshots/borsh_derive__attribute_helpers__field__tests__bounds_parsing4.snap
---
source: borsh-derive/src/attribute_helpers/field.rs
expression: debug_print_vec_of_tokenizable(attrs.deserialize)
---
K : Hash

