borsh-derive/src/attribute_helpers/snapshots/borsh_derive__attribute_helpers__field__tests__bounds_parsing_error.snap
---
source: borsh-derive/src/attribute_helpers/field.rs
expression: err
---
Error(
    "malformed bound attribute, expected `bound(deserialize = ..., serialize = ...)`",
)
