borsh-derive/src/attribute_helpers/snapshots/borsh_derive__attribute_helpers__field__tests__bounds_parsing_error3.snap
---
source: borsh-derive/src/attribute_helpers/field.rs
expression: err
---
Error(
    "expected borsh bound attribute to be a string: `deserialize = \"...\"`",
)
