borsh-derive/src/attribute_helpers/snapshots/borsh_derive__attribute_helpers__field__tests__root_bounds_and_params_combined.snap
---
source: borsh-derive/src/attribute_helpers/field.rs
expression: debug_print_vec_of_tokenizable(bounds.deserialize)
---
K : Hash

