borsh-derive/src/attribute_helpers/snapshots/borsh_derive__attribute_helpers__field__tests__root_bounds_and_wrong_key_combined.snap
---
source: borsh-derive/src/attribute_helpers/field.rs
expression: err
---
Error(
    "malformed borsh attribute, expected `borsh(bound(...), deserialize_with = ..., schema(...), serialize_with = ...)`",
)
