borsh-derive/src/attribute_helpers/snapshots/borsh_derive__attribute_helpers__field__tests__schema_params_parsing1.snap
---
source: borsh-derive/src/attribute_helpers/field.rs
expression: debug_print_vec_of_tokenizable(schema_attrs.unwrap().params)
---
T => < T as TraitName > :: Associated

